--- a/css/sass/home.scss
+++ b/css/sass/home.scss
@@ -209,7 +209,7 @@
 
 .resume-download {
 	display: flex;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
 	align-items: center;
 	gap: 2em;
 
